--- a/playbooks/setup.yml
+++ b/playbooks/setup.yml
@@ -14,5 +14,6 @@
     - { role: nexcess.php, php_prefix: "php71" }
     - nexcess.interworx
     - { role: nexcess.puppet, when: "nex_env_target is undefined or nex_env_target != 'vagrant'" }
+    - nexcess.repo
   post_tasks:
     - include: tasks/cloudhost.yml mode="post"
